adjust font-size & icon size

--- a/index.html
+++ b/index.html
@@ -79,78 +79,6 @@
         <p class="about-item onEnter" style="--delay: .40s" tabindex="0">If you need to get in <a aria-labelledby="contact" id="contact" class="link-contact" href="mailto:rma.james@gmail.com?Subject=Inquiry">contact</a> feel free to reach out.</p>
       </div>
     </main>
-    <!-- <footer class="footer-menu">
-      <ul>
-        <li class="footer-menu--item onEnter" style='--delay: .54s' role='listitem'>
-          <a href="https://www.linkedin.com/in/robertmajames" class="linkedIn" target="_blank" rel="noopener">
-            <svg 
-              id="icon-linkedIn"
-              role="img"
-              aria-label='LinkedIn Icon'
-              style="width:2em;height:2em"
-              viewbox="0 0 24 24">
-              <title>Linkedin icon</title>
-              <use href="#linkedIn"></use>
-            </svg>
-            <p class='icon-text'>LinkedIn</p>
-          </a>
-        </li>
-        <li class="footer-menu--item onEnter" style='--delay: .5s' role='listitem'>
-          <a href="https://github.com/rmjames" class="github" target="_blank" rel="noopener">
-            <svg
-              id="icon-github"
-              role="img"
-              aria-label='Github Icon'
-              style="width:2em;height:2em"
-              viewbox="0 0 24 24">
-              <title>Github icon</title>
-              <use href="#github"></use>
-            </svg>
-            <p class='icon-text'>Github</p>
-          </a>
-        </li>
-        <li class="footer-menu--item" role='listitem'>
-          <a href="https://codepen.io/rmjames/" class="codepen" target="_blank" rel="noopener">
-            <svg
-              id="icon-codepen"
-              role="img"
-              style="width:2em;height:2em"
-              viewbox="0 0 512 512">
-              <title>Codepen icon</title>
-              <use
-                href="#codepen"
-                transform="scale(1.2) translate(-20,-25)">
-              </use>
-            </svg>
-            <p>Codepen</p>
-          </a>
-        </li>
-        <li class="footer-menu--item onEnter" style='--delay: .48s' role='listitem'>
-          <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
-            <svg
-              id="icon-twiter"
-              role="img"
-              aria-label='Twitter Icon'
-              style="width:2em;height:2em"
-              viewbox="0 0 24 24">
-              <title>Twitter icon</title>
-              <use href="#twitter"></use>
-            </svg>
-            <p class='icon-text'>X</p>
-          </a>
-        </li>
-        <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
-          <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
-            <svg id="icon-email" role="img" style="width:2em;height:2em" viewBox="0 0 24 24">
-              <use href="#email"></use>
-            </svg>
-            <p class='icon-text'>Email</p>
-          </a>
-        </li>
-      </ul>
-      <p class="copyright">©Robert James</p>
-    </footer> -->
-
     <footer class="footer-menu">
       <ul>
         <li class="footer-menu--item onEnter" style='--delay: .54s' role='listitem'>
@@ -159,7 +87,7 @@
               id="icon-linkedIn"
               role="img"
               aria-label='LinkedIn Icon'
-              style="width:2em;height:2em"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Linkedin icon</title>
               <use href="#linkedIn"></use>
@@ -173,7 +101,7 @@
               id="icon-github"
               role="img"
               aria-label='Github Icon'
-              style="width:2em;height:2em"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Github icon</title>
               <use href="#github"></use>
@@ -186,7 +114,8 @@
             <svg
               id="icon-codepen"
               role="img"
-              style="width:2em;height:2em"
+              arial-label="Codepen Icon"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 512 512">
               <title>Codepen icon</title>
               <use
@@ -203,7 +132,7 @@
               id="icon-twiter"
               role="img"
               aria-label='Twitter Icon'
-              style="width:2em;height:2em"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Twitter icon</title>
               <use href="#twitter"></use>
@@ -213,14 +142,18 @@
         </li>
         <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
           <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
-            <svg id="icon-email" role="img" style="width:2em;height:2em" viewBox="0 0 24 24">
+            <svg 
+              id="icon-email" 
+              role="img" 
+              style="width:1.5rem;height:1.5rem" 
+              viewBox="0 0 24 24">
               <use href="#email"></use>
             </svg>
             <p class='icon-text'>Email</p>
           </a>
         </li>
       </ul>
-      <p class="copryright">©Robert James</p>
+      <p class="copyright">©Robert James</p>
     </footer>
   </body>
 </html>
