--- a/work.html
+++ b/work.html
@@ -95,7 +95,7 @@
               id="icon-linkedIn"
               role="img"
               aria-label='LinkedIn Icon'
-              style="width:2em;height:2em"
+              style="width:1.25rem;height:1.25rem" 
               viewbox="0 0 24 24">
               <title>Linkedin icon</title>
               <use href="#linkedIn"></use>
@@ -109,7 +109,7 @@
               id="icon-github"
               role="img"
               aria-label='Github Icon'
-              style="width:2em;height:2em"
+              style="width:1.25rem;height:1.25rem" 
               viewbox="0 0 24 24">
               <title>Github icon</title>
               <use href="#github"></use>
@@ -122,7 +122,8 @@
             <svg
               id="icon-codepen"
               role="img"
-              style="width:2em;height:2em"
+              aria-label='Codepen Icon'
+              style="width:1.25rem;height:1.25rem" 
               viewbox="0 0 512 512">
               <title>Codepen icon</title>
               <use
@@ -139,7 +140,7 @@
               id="icon-twiter"
               role="img"
               aria-label='Twitter Icon'
-              style="width:2em;height:2em"
+              style="width:1.25rem;height:1.25rem" 
               viewbox="0 0 24 24">
               <title>Twitter icon</title>
               <use href="#twitter"></use>
@@ -149,14 +150,19 @@
         </li>
         <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
           <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
-            <svg id="icon-email" role="img" style="width:2em;height:2em" viewBox="0 0 24 24">
+            <svg 
+              id="icon-email"   
+              role="img" 
+              aria-label='Email Icon'
+              style="width:1.25rem;height:1.25rem" 
+              viewBox="0 0 24 24">
               <use href="#email"></use>
             </svg>
             <p class='icon-text'>Email</p>
           </a>
         </li>
       </ul>
-      <p class="copryright">©Robert James</p>
+      <p class="copyright">©Robert James</p>
     </footer>
   </body>
 </html>
