--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h1 tabindex="0"><a href="/index.html">robert james</a></h1>
       <nav>
         <ul>
-          <li><a href="work.html" data-view-transition>work</a></li>
+          <li class="nav-item"><a href="work.html" data-view-transition>work</a></li>
         </ul>
       </nav>
     </header>
