--- a/work.html
+++ b/work.html
@@ -67,7 +67,7 @@
       <h1 tabindex="0"><a href="index.html">robert james</a></h1>
       <nav>
         <ul>
-          <li><a href="work.html">work</a></li>
+          <li class='nav-item'><a href="work.html">work</a></li>
         </ul>
       </nav>
     </header>
