--- a/resume.html
+++ b/resume.html
@@ -90,7 +90,7 @@
           <details class="job" name="job" open>
               <summary id="job-title--consultant">
                   <h3>Independent Consultant</h3>
-                  <p> <date datetime="2024-01/2024-08">1/2024 - 8/2024</date></p>
+                  <p> <date datetime="2001-01/present">2001 - present</date></p>
               </summary>
               <em class="job-title">Product Design</em>
               <ul>
@@ -100,6 +100,10 @@
                   <li>Updated existing designs to incorporate new product initiatives.</li>
                   <li>Developed an interactive prototype using both new and existing screens to walk through multiple user flows.</li>
               </ul>
+                  <em class="job-title">Web Design/Development</em>
+                  <ul>
+                      <li>Worked with Interior Design Architect to produce a portfolio website.</li>
+                  </ul>
           </details>
 
           <details class="job" name="job">
