--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/mpa.css">
     <link rel="icon" type="image/svg+xml" href="images/icon.svg">
-    <link rel="apple-touch-icon" href="/images/icon-ios.svg">
-    <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
-    <link rel="icon" type="image/png" href="/favicon.png" sizes="144x144">
-    <link rel="icon" type="image/png" href="/favicon_512.png" sizes="512x512">
-    <link rel="icon" type="image/png" href="/favicon_192.png" sizes="192x192">
+    <!-- <link rel="apple-touch-icon" href="/images/icon-ios.svg"> -->
+    <!-- <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144"> -->
+    <!-- <link rel="icon" type="image/png" href="/favicon.png" sizes="144x144"> -->
+    <!-- <link rel="icon" type="image/png" href="/favicon_512.png" sizes="512x512"> -->
+    <!-- <link rel="icon" type="image/png" href="/favicon_192.png" sizes="192x192"> -->
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
@@ -64,7 +64,7 @@
       </symbol>  
     </svg>
     <header class="header">
-      <h1 tabindex="0"><a href="/">robert james</a></h1>
+      <h1><a href="/">robert james</a></h1>
       <nav>
         <ul>
           <li class="nav-item"><a href="/work.html" aria-labelledby="work" data-view-transition>work</a></li>
@@ -74,10 +74,10 @@
     </header>
     <main id="about">
       <div class="cover">
-        <p class="about-item onEnter" style="--delay: .32s" tabindex="0">I'm a UX Engineer who designs and builds digital experiences and products.</p>
+        <p class="about-item onEnter" style="--delay: .32s">I'm a UX Engineer who designs and builds digital experiences and products.</p>
       </div>
       <div class="cover">
-        <p class="about-item onEnter" style="--delay: .40s" tabindex="0">If you need to get in <a aria-labelledby="contact" id="contact" class="link-contact" href="mailto:rma.james@gmail.com?Subject=Inquiry">contact</a> feel free to reach out.</p>
+        <p class="about-item onEnter" style="--delay: .40s">If you need to get in <a aria-label="Send email to contact Robert James" id="contact" class="link-contact" href="mailto:rma.james@gmail.com?Subject=Inquiry">contact</a> feel free to reach out.</p>
       </div>
     </main>
     <footer class="footer-menu">
@@ -115,7 +115,7 @@
             <svg
               id="icon-codepen"
               role="img"
-              arial-label="Codepen Icon"
+              aria-label="Codepen Icon"
               style="width:1.5rem;height:1.5rem"
               viewbox="0 0 512 512">
               <title>Codepen icon</title>
@@ -146,6 +146,7 @@
             <svg 
               id="icon-email" 
               role="img" 
+              aria-label="Email Icon"
               style="width:1.5rem;height:1.5rem" 
               viewBox="0 0 24 24">
               <use href="#email"></use>
