--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,7 @@
       </symbol>  
     </svg>
     <header class="header">
-      <h1 tabindex="0"><a href="/">robert james</a></h1>
+      <h1><a href="/">robert james</a></h1>
       <nav>
         <ul>
           <li><a href="/work.html">work</a></li>
@@ -244,6 +244,7 @@
             <svg
               id="icon-codepen"
               role="img"
+              aria-label="Codepen Icon"
               style="width:2em;height:2em"
               viewbox="0 0 512 512">
               <title>Codepen icon</title>
@@ -271,14 +272,14 @@
         </li>
         <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
           <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
-            <svg id="icon-email" role="img" style="width:2em;height:2em" viewBox="0 0 24 24">
+            <svg id="icon-email" role="img" aria-label="Email Icon" style="width:2em;height:2em" viewBox="0 0 24 24">
               <use href="#email"></use>
             </svg>
             <p class='icon-text'>Email</p>
           </a>
         </li>
       </ul>
-      <p class="copryright">© Robert James 2024</p>
+      <p class="copyright">© Robert James 2024</p>
     </footer>
   </body>
 </html>
