--- a/work.html
+++ b/work.html
@@ -65,7 +65,7 @@
       </symbol>  
     </svg>
     <header class="header">
-      <h1 tabindex="0"><a href="/">robert james</a></h1>
+      <h1><a href="/">robert james</a></h1>
       <nav>
         <ul>
           <li class='nav-item'><a href="/work.html">work</a></li>
@@ -75,7 +75,7 @@
     </header>
     <main id="about">
       <div class="cover">
-        <p  id='work' class='about-item onEnter' style='--delay: .36s' tabindex="0" >I have worked on digital products for 
+        <p  id='work' class='about-item onEnter' style='--delay: .36s'>I have worked on digital products for 
           <span class="'brands">
             <span class='brand'>SBE</span> <span>&sdot;</span>
             <span class='brand'>Guardian</span> <span>&sdot;</span>
@@ -124,7 +124,7 @@
             <svg
               id="icon-codepen"
               role="img"
-              aria-label='Codepen Icon'
+              aria-label="Codepen Icon"
               style="width:1.25rem;height:1.25rem" 
               viewbox="0 0 512 512">
               <title>Codepen icon</title>
@@ -155,7 +155,7 @@
             <svg 
               id="icon-email"   
               role="img" 
-              aria-label='Email Icon'
+              aria-label="Email Icon"
               style="width:1.25rem;height:1.25rem" 
               viewBox="0 0 24 24">
               <use href="#email"></use>
