--- a/lab.html
+++ b/lab.html
@@ -28,7 +28,10 @@
     <link rel="preload" href="styles/mpa.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@300..1000,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
+    <link rel="dns-prefetch" href="https://cpwebassets.codepen.io">
+    <link rel="preload" href="https://fonts.gstatic.com/s/recursive/v37/8vI9msNAzcmCWUBBJd-CFkYWgW-w2Q.woff2" as="font" type="font/woff2" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@400..900,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/mpa.css">
     <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
