--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <h1><a href="/">robert james</a></h1>
       <nav>
         <ul>
-          <li class="nav-item"><a href="/work.html" aria-labelledby="work" data-view-transition>work</a></li>
-          <li class="nav-item"><a href="resume.html">resume</a></li>
+          <li class="nav-item"><a href="/work.html" data-view-transition>work</a></li>
+          <li class="nav-item"><a href="/resume.html">resume</a></li>
         </ul>
       </nav>
     </header>
@@ -132,9 +132,9 @@
         <li class="footer-menu--item onEnter" style='--delay: .48s' role='listitem'>
           <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
             <svg
-              id="icon-twiter"
+              id="icon-twitter"
               role="img"
-              aria-label='Twitter Icon'
+              aria-label="Twitter Icon"
               style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Twitter icon</title>
