--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@400..900,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/mpa.css">
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="images/icon.svg">
     <link rel="apple-touch-icon" href="/images/icon-ios.svg">
     <script src="scripts/nav-transitions.js" defer></script>
     <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
@@ -70,8 +70,8 @@
       <h1><a href="/">robert james</a></h1>
       <nav>
         <ul>
-          <li><a href="/work.html">work</a></li>
-          <li><a href="/resume.html">resume</a></li>
+          <li class="nav-item"><a href="/work.html">work</a></li>
+          <li class="nav-item"><a href="/resume.html">resume</a></li>
         </ul>
       </nav>
     </header>
@@ -261,9 +261,9 @@
         <li class="footer-menu--item onEnter" style='--delay: .48s' role='listitem'>
           <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
             <svg
-              id="icon-twiter"
+              id="icon-twitter"
               role="img"
-              aria-label='Twitter Icon'
+              aria-label="Twitter Icon"
               style="width:2em;height:2em"
               viewbox="0 0 24 24">
               <title>Twitter icon</title>
