change font size on footer icons

--- a/resume.html
+++ b/resume.html
@@ -218,8 +218,8 @@
             <svg 
               id="icon-linkedIn"
               role="img"
-              aria-label='LinkedIn Icon'
-              style="width:2em;height:2em"
+              aria-label="LinkedIn Icon"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Linkedin icon</title>
               <use href="#linkedIn"></use>
@@ -232,8 +232,8 @@
             <svg
               id="icon-github"
               role="img"
-              aria-label='Github Icon'
-              style="width:2em;height:2em"
+              aria-label="Github Icon"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Github icon</title>
               <use href="#github"></use>
@@ -247,7 +247,7 @@
               id="icon-codepen"
               role="img"
               aria-label="Codepen Icon"
-              style="width:2em;height:2em"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 512 512">
               <title>Codepen icon</title>
               <use
@@ -264,7 +264,7 @@
               id="icon-twitter"
               role="img"
               aria-label="Twitter Icon"
-              style="width:2em;height:2em"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Twitter icon</title>
               <use href="#twitter"></use>
@@ -274,7 +274,7 @@
         </li>
         <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
           <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
-            <svg id="icon-email" role="img" aria-label="Email Icon" style="width:2em;height:2em" viewBox="0 0 24 24">
+            <svg id="icon-email" role="img" aria-label="Email Icon" style="width:1.5rem;height:1.5rem" viewBox="0 0 24 24">
               <use href="#email"></use>
             </svg>
             <p class='icon-text'>Email</p>
