remove year from copyright

--- a/resume.html
+++ b/resume.html
@@ -281,7 +281,7 @@
           </a>
         </li>
       </ul>
-      <p class="copyright">© Robert James 2025</p>
+      <p class="copyright">© Robert James</p>
     </footer>
   </body>
 </html>
