--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@400..900,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/mpa.css">
-    <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="images/icon.svg">
     <link rel="apple-touch-icon" href="/images/icon-ios.svg">
     <script src="scripts/nav-transitions.js" defer></script>
     <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
@@ -70,8 +70,8 @@
       <h1><a href="/">robert james</a></h1>
       <nav>
         <ul>
-          <li><a href="/work.html">work</a></li>
-          <li><a href="/resume.html">resume</a></li>
+          <li class="nav-item"><a href="/work.html">work</a></li>
+          <li class="nav-item"><a href="/resume.html">resume</a></li>
         </ul>
       </nav>
     </header>
@@ -218,8 +218,8 @@
             <svg 
               id="icon-linkedIn"
               role="img"
-              aria-label='LinkedIn Icon'
-              style="width:2em;height:2em"
+              aria-label="LinkedIn Icon"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Linkedin icon</title>
               <use href="#linkedIn"></use>
@@ -232,8 +232,8 @@
             <svg
               id="icon-github"
               role="img"
-              aria-label='Github Icon'
-              style="width:2em;height:2em"
+              aria-label="Github Icon"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Github icon</title>
               <use href="#github"></use>
@@ -247,7 +247,7 @@
               id="icon-codepen"
               role="img"
               aria-label="Codepen Icon"
-              style="width:2em;height:2em"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 512 512">
               <title>Codepen icon</title>
               <use
@@ -261,10 +261,10 @@
         <li class="footer-menu--item onEnter" style='--delay: .48s' role='listitem'>
           <a href="https://twitter.com/bkrjames" class="twitter" target="_blank" rel="noopener">
             <svg
-              id="icon-twiter"
+              id="icon-twitter"
               role="img"
-              aria-label='Twitter Icon'
-              style="width:2em;height:2em"
+              aria-label="Twitter Icon"
+              style="width:1.5rem;height:1.5rem"
               viewbox="0 0 24 24">
               <title>Twitter icon</title>
               <use href="#twitter"></use>
@@ -274,14 +274,14 @@
         </li>
         <li class="footer-menu--item onEnter" style='--delay: .44s' role='listitem'>
           <a href="mailto:rma.james@gmail.com?Subject=Inquiry" class="email">
-            <svg id="icon-email" role="img" aria-label="Email Icon" style="width:2em;height:2em" viewBox="0 0 24 24">
+            <svg id="icon-email" role="img" aria-label="Email Icon" style="width:1.5rem;height:1.5rem" viewBox="0 0 24 24">
               <use href="#email"></use>
             </svg>
             <p class='icon-text'>Email</p>
           </a>
         </li>
       </ul>
-      <p class="copyright">© Robert James 2025</p>
+      <p class="copyright">© Robert James</p>
     </footer>
   </body>
 </html>
