--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <title>Robert James</title>
         <meta property="og:title" content="Robert James" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http:robertjames.nyc" />
+        <meta property="og:url" content="https://robertjames.nyc" />
         <meta
             property="og:image"
             content="https://assets.codepen.io/37861/rj-whole.png"
@@ -65,11 +65,6 @@
         <link rel="stylesheet" href="styles/main.css" />
         <link rel="stylesheet" href="styles/mpa.css" />
         <link rel="icon" type="image/svg+xml" href="images/icon.svg" />
-        <!-- <link rel="apple-touch-icon" href="/images/icon-ios.svg"> -->
-        <!-- <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144"> -->
-        <!-- <link rel="icon" type="image/png" href="/favicon.png" sizes="144x144"> -->
-        <!-- <link rel="icon" type="image/png" href="/favicon_512.png" sizes="512x512"> -->
-        <!-- <link rel="icon" type="image/png" href="/favicon_192.png" sizes="192x192"> -->
         <link rel="manifest" href="manifest.json" />
     </head>
     <body>
@@ -205,8 +200,6 @@
                 </p>
             </div>
         </main>
-
-        <!-- Company Popovers -->
         <div id="sbe-popover" popover class="company-popover">
             <div class="company-description">Hospitality & Entertainment</div>
             <div class="work-summary">
@@ -215,7 +208,6 @@
                 hospitality brand.
             </div>
         </div>
-
         <div id="guardian-popover" popover class="company-popover">
             <div class="company-description">Insurance</div>
             <div class="work-summary">
@@ -224,7 +216,6 @@
                 capabilities.
             </div>
         </div>
-
         <div id="macmillan-popover" popover class="company-popover">
             <div class="company-description">
                 International Publishing & Education
@@ -235,7 +226,6 @@
                 platform bug fixes.
             </div>
         </div>
-
         <div id="weber-shandwick-popover" popover class="company-popover">
             <div class="company-description">Large Retail Pharmacy</div>
             <div class="work-summary">
@@ -244,7 +234,6 @@
                 reusable accessible components.
             </div>
         </div>
-
         <div id="royal-caribbean-popover" popover class="company-popover">
             <div class="company-description">Media & Entertainment</div>
             <div class="work-summary">
@@ -253,7 +242,6 @@
                 frontend development.
             </div>
         </div>
-
         <div id="microsoft-popover" popover class="company-popover">
             <div class="company-description">Large Technology Company</div>
             <div class="work-summary">
@@ -262,7 +250,6 @@
                 interviews and creating technical schematics.
             </div>
         </div>
-
         <div id="bank-of-america-popover" popover class="company-popover">
             <div class="company-description">Financial Services</div>
             <div class="work-summary">
@@ -271,7 +258,6 @@
                 manual effort.
             </div>
         </div>
-
         <div id="corteva-popover" popover class="company-popover">
             <div class="company-description">Agricultural Technology</div>
             <div class="work-summary">
