--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
             <div class="cover work">
                 <p id="work" class="about-item onEnter" style="--delay: 0.36s">
-                    I have worked on digital products for
+                    I have collaborated and worked on digital products for
                     <span class="brands">
                         <button
                             type="button"
@@ -203,17 +203,15 @@
         <div id="sbe-popover" popover class="company-popover">
             <div class="company-description">Hospitality & Entertainment</div>
             <div class="work-summary">
-                Enhanced user experience for sbe.com and contributed to
-                marketing campaigns through HTML email development for their
-                hospitality brand.
+                At sbe.com I contributed to marketing campaigns through HTML
+                email development for their hospitality brand.
             </div>
         </div>
         <div id="guardian-popover" popover class="company-popover">
             <div class="company-description">Insurance</div>
             <div class="work-summary">
-                Built pages for Guardian's My Account Management Portal using
-                Drupal 7, Foundation, and Sass, improving customer self-service
-                capabilities.
+                Built pages for Guardian's My Account Management Portal
+                improving customer self-service capabilities.
             </div>
         </div>
         <div id="macmillan-popover" popover class="company-popover">
@@ -237,33 +235,33 @@
         <div id="royal-caribbean-popover" popover class="company-popover">
             <div class="company-description">Media & Entertainment</div>
             <div class="work-summary">
-                Streamlined royalties payment processing using blockchain
-                technology, achieving 99% reduction in processing time through
-                frontend development.
+                I was part of the team that collaborated with the client to
+                optimize CI/CD infrastructure across multiple teams resulting in
+                improved efficiency and faster deployments.
             </div>
         </div>
         <div id="microsoft-popover" popover class="company-popover">
             <div class="company-description">Large Technology Company</div>
             <div class="work-summary">
-                Researched and investigated blockchain solutions for
-                streamlining internal accounting processes, conducting
-                interviews and creating technical schematics.
+                Delivered a streamlined royalties payment processing using
+                blockchain technology, achieving 99% reduction in processing
+                time through frontend development.
             </div>
         </div>
         <div id="bank-of-america-popover" popover class="company-popover">
             <div class="company-description">Financial Services</div>
             <div class="work-summary">
-                Implemented blockchain solution to streamline loan payment
-                processes, resulting in faster transaction times and reduced
-                manual effort.
+                Worked on a team that implemented a blockchain solution to
+                streamline loan payment processes, resulting in faster
+                transaction times and reduced manual effort.
             </div>
         </div>
         <div id="corteva-popover" popover class="company-popover">
             <div class="company-description">Agricultural Technology</div>
             <div class="work-summary">
-                Built blockchain-based product tracking and traceability system
-                from research through development, including mobile web app for
-                production line management.
+                Worked on a team that built blockchain-based product tracking
+                and traceability system from research through development,
+                including mobile web app for production line management.
             </div>
         </div>
         <footer class="footer-menu">
