--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div id="guardian-popover" popover class="company-popover">
             <div class="company-description">Insurance</div>
             <div class="work-summary">
-                Built pages for Guardian's My Account Management Portal
+                Built out pages for Guardian's My Account Management Portal
                 improving customer self-service capabilities.
             </div>
         </div>
@@ -219,23 +219,23 @@
                 International Publishing & Education
             </div>
             <div class="work-summary">
-                Developed and launched Question Bank Editor, an internal tool
-                for content editors to curate educational questions, plus
-                platform bug fixes.
+                Worked on a team that developed and launched Question Bank
+                Editor, an internal tool for content editors to curate
+                educational questions, plus platform bug fixes.
             </div>
         </div>
         <div id="weber-shandwick-popover" popover class="company-popover">
             <div class="company-description">Large Retail Pharmacy</div>
             <div class="work-summary">
-                Launched curbside pickup checkout flow for pharmacy
-                prescriptions, reducing customer wait times and creating
-                reusable accessible components.
+                I was part of the team that launched a curbside pickup checkout
+                flow for pharmacy prescriptions, reducing customer wait times
+                and creating reusable accessible components.
             </div>
         </div>
         <div id="royal-caribbean-popover" popover class="company-popover">
             <div class="company-description">Media & Entertainment</div>
             <div class="work-summary">
-                I was part of the team that collaborated with the client to
+                I was part of a team that collaborated with the client to
                 optimize CI/CD infrastructure across multiple teams resulting in
                 improved efficiency and faster deployments.
             </div>
@@ -243,9 +243,9 @@
         <div id="microsoft-popover" popover class="company-popover">
             <div class="company-description">Large Technology Company</div>
             <div class="work-summary">
-                Delivered a streamlined royalties payment processing using
-                blockchain technology, achieving 99% reduction in processing
-                time through frontend development.
+                Worked on a team that delivered a royalties payment processing
+                system using blockchain technology, achieving 99% reduction in
+                processing time.
             </div>
         </div>
         <div id="bank-of-america-popover" popover class="company-popover">
@@ -259,9 +259,9 @@
         <div id="corteva-popover" popover class="company-popover">
             <div class="company-description">Agricultural Technology</div>
             <div class="work-summary">
-                Worked on a team that built blockchain-based product tracking
-                and traceability system from research through development,
-                including mobile web app for production line management.
+                Worked on a team that built a blockchain-based tracking and
+                traceability system from research through development. Including
+                a mobile web app for production line management.
             </div>
         </div>
         <footer class="footer-menu">
