Add preload for css & preconnect for google analytics in the resume page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         <meta name="twitter:image:alt" content="Robert James" />
         <link rel="preload" href="styles/main.css" as="style" />
         <link rel="preload" href="styles/mpa.css" as="style" />
+        <link rel="preload" href="styles/main.css" as="style" />
+        <link rel="preload" href="styles/mpa.css" as="style" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="preconnect" href="https://www.google-analytics.com" />
