--- a/resume.html
+++ b/resume.html
@@ -26,8 +26,11 @@
     <meta name="twitter:image:alt" content="Robert James"/>
     <link rel="preload" href="styles/main.css" as="style">
     <link rel="preload" href="styles/mpa.css" as="style">
+    <link rel="preload" href="styles/main.css" as="style">
+    <link rel="preload" href="styles/mpa.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://www.google-analytics.com">
     <link rel="dns-prefetch" href="https://www.googletagmanager.com">
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@400..900,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/main.css" media="print" onload="this.media='all'">
