--- a/index.html
+++ b/index.html
@@ -48,22 +48,20 @@
         <meta name="twitter:image:alt" content="Robert James" />
         <link rel="preload" href="styles/main.css" as="style" />
         <link rel="preload" href="styles/mpa.css" as="style" />
+        <link rel="preload" href="styles/main.css" as="style" />
+        <link rel="preload" href="styles/mpa.css" as="style" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="preconnect" href="https://www.google-analytics.com" />
         <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
-        <link
-            rel="preload"
-            href="https://fonts.gstatic.com/s/recursive/v37/8vI9msNAzcmCWUBBJd-CFkYWgW-w2Q.woff2"
-            as="font"
-            type="font/woff2"
-            crossorigin
-        />
         <link
             href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@400..900,0..1,0..1,0..1&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="styles/main.css" />
-        <link rel="stylesheet" href="styles/mpa.css" />
+        <link rel="stylesheet" href="styles/main.css" media="print" onload="this.media='all'">
+        <noscript><link rel="stylesheet" href="styles/main.css"></noscript>
+        <link rel="stylesheet" href="styles/mpa.css" media="print" onload="this.media='all'">
+        <noscript><link rel="stylesheet" href="styles/mpa.css"></noscript>
         <link rel="icon" type="image/svg+xml" href="images/icon.svg" />
         <link rel="manifest" href="manifest.json" />
     </head>
