--- a/resume.html
+++ b/resume.html
@@ -26,18 +26,21 @@
     <meta name="twitter:image:alt" content="Robert James"/>
     <link rel="preload" href="styles/main.css" as="style">
     <link rel="preload" href="styles/mpa.css" as="style">
+    <link rel="preload" href="styles/main.css" as="style">
+    <link rel="preload" href="styles/mpa.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://www.google-analytics.com">
     <link rel="dns-prefetch" href="https://www.googletagmanager.com">
-    <link rel="preload" href="https://fonts.gstatic.com/s/recursive/v37/8vI9msNAzcmCWUBBJd-CFkYWgW-w2Q.woff2" as="font" type="font/woff2" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Recursive:wght,CASL,CRSV,MONO@400..900,0..1,0..1,0..1&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/mpa.css">
+    <link rel="stylesheet" href="styles/main.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="styles/main.css"></noscript>
+    <link rel="stylesheet" href="styles/mpa.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="styles/mpa.css"></noscript>
     <link rel="icon" type="image/svg+xml" href="images/icon.svg">
     <link rel="apple-touch-icon" href="/images/icon-ios.svg">
     <script src="scripts/nav-transitions.js" type="module" defer></script>
     <link rel="icon" type="image/png" href="/favicon_144.png" sizes="144x144">
-    <link rel="icon" type="image/png" href="/favicon.png" sizes="144x144">
     <link rel="icon" type="image/png" href="/favicon_512.png" sizes="512x512">
     <link rel="icon" type="image/png" href="/favicon_192.png" sizes="192x192">
     <link rel="manifest" href="manifest.json">
