remove details open attr on resume certification

--- a/resume.html
+++ b/resume.html
@@ -201,7 +201,7 @@
 
       <section aria-labelledby="certifications-heading" data-analytics-section="Certifications">
           <h2 id="certifications-heading">Certifications</h2>
-          <details open>
+          <details>
               <summary>
                 <h3>Certification History</h3>
               </summary>
