--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
       <h1><a href="/">robert james</a></h1>
       <nav>
         <ul>
-          <li class="nav-item"><a href="/resume.html">resume</a></li>
+          <li class="header-nav-item"><a href="/resume.html">resume</a></li>
         </ul>
       </nav>
     </header>
