--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
       <h1><a href="/">robert james</a></h1>
       <nav>
         <ul>
-          <li class="nav-item"><a href="/resume.html">resume</a></li>
+          <li class="header-nav-item"><a href="/resume.html">resume</a></li>
         </ul>
       </nav>
     </header>
@@ -201,7 +201,7 @@
 
       <section aria-labelledby="certifications-heading" data-analytics-section="Certifications">
           <h2 id="certifications-heading">Certifications</h2>
-          <details open>
+          <details>
               <summary>
                 <h3>Certification History</h3>
               </summary>
