add link to popover

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 At sbe.com I contributed to marketing campaigns through HTML
                 email development for their hospitality brand.
             </div>
+            <a href="/portfolio/sbe" class="portfolio-link">View Portfolio →</a>
         </div>
         <div id="guardian-popover" popover class="company-popover">
             <div class="company-description">Insurance</div>
@@ -201,6 +202,7 @@
                 Built out pages for Guardian's My Account Management Portal
                 improving customer self-service capabilities.
             </div>
+            <a href="/portfolio/guardian" class="portfolio-link">View Portfolio →</a>
         </div>
         <div id="macmillan-popover" popover class="company-popover">
             <div class="company-description">
@@ -211,6 +213,7 @@
                 Editor, an internal tool for content editors to curate
                 educational questions, plus platform bug fixes.
             </div>
+            <a href="/portfolio/macmillan" class="portfolio-link">View Portfolio →</a>
         </div>
         <div id="weber-shandwick-popover" popover class="company-popover">
             <div class="company-description">Large Retail Pharmacy</div>
@@ -219,6 +222,7 @@
                 flow for pharmacy prescriptions, reducing customer wait times
                 and creating reusable accessible components.
             </div>
+            <a href="/portfolio/weber-shandwick" class="portfolio-link">View Portfolio →</a>
         </div>
         <div id="royal-caribbean-popover" popover class="company-popover">
             <div class="company-description">Media & Entertainment</div>
@@ -227,6 +231,7 @@
                 optimize CI/CD infrastructure across multiple teams resulting in
                 improved efficiency and faster deployments.
             </div>
+            <a href="/portfolio/royal-caribbean" class="portfolio-link">View Portfolio →</a>
         </div>
         <div id="microsoft-popover" popover class="company-popover">
             <div class="company-description">Large Technology Company</div>
@@ -235,6 +240,7 @@
                 system using blockchain technology, achieving 99% reduction in
                 processing time.
             </div>
+            <a href="/portfolio/microsoft" class="portfolio-link">View Portfolio →</a>
         </div>
         <div id="bank-of-america-popover" popover class="company-popover">
             <div class="company-description">Financial Services</div>
@@ -243,6 +249,7 @@
                 streamline loan payment processes, resulting in faster
                 transaction times and reduced manual effort.
             </div>
+            <a href="/portfolio/bank-of-america" class="portfolio-link">View Portfolio →</a>
         </div>
         <div id="corteva-popover" popover class="company-popover">
             <div class="company-description">Agricultural Technology</div>
@@ -251,6 +258,7 @@
                 traceability system from research through development. Including
                 a mobile web app for production line management.
             </div>
+            <a href="/portfolio/corteva" class="portfolio-link">View Portfolio →</a>
         </div>
         <footer class="footer-menu">
             <ul>
