--- a/index.html
+++ b/index.html
@@ -213,11 +213,9 @@
             </div>
         </div>
         <div id="weber-shandwick-popover" popover class="company-popover">
-            <div class="company-description">Large Retail Pharmacy</div>
+            <div class="company-description">Large Media Company </div>
             <div class="work-summary">
-                I was part of the team that launched a curbside pickup checkout
-                flow for pharmacy prescriptions, reducing customer wait times
-                and creating reusable accessible components.
+                I worked on a project management tool that allocates resources & staff to projects.
             </div>
         </div>
         <div id="royal-caribbean-popover" popover class="company-popover">
