--- a/index.html
+++ b/index.html
@@ -213,9 +213,11 @@
             </div>
         </div>
         <div id="weber-shandwick-popover" popover class="company-popover">
-            <div class="company-description">Large Media Company </div>
+            <div class="company-description">Large Retail Pharmacy</div>
             <div class="work-summary">
-                I worked on a project management tool that allocates resources & staff to projects.
+                I was part of the team that launched a curbside pickup checkout
+                flow for pharmacy prescriptions, reducing customer wait times
+                and creating reusable accessible components.
             </div>
         </div>
         <div id="royal-caribbean-popover" popover class="company-popover">
@@ -233,6 +235,7 @@
                 system using blockchain technology, achieving 99% reduction in
                 processing time.
             </div>
+            <a href="/portfolio/microsoft" class="portfolio-link">View Portfolio →</a>
         </div>
         <div id="bank-of-america-popover" popover class="company-popover">
             <div class="company-description">Financial Services</div>
@@ -249,6 +252,7 @@
                 traceability system from research through development. Including
                 a mobile web app for production line management.
             </div>
+            <a href="/portfolio/corteva" class="portfolio-link">View Portfolio →</a>
         </div>
         <footer class="footer-menu">
             <ul>
