feat: Add YouTube Music redesign project

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <h1><a href="/">robert james</a></h1>
             <nav>
                 <ul>
+                    <li class="header-nav-item"><a href="/work/youtube-music-redesign/">work</a></li>
                     <li class="header-nav-item"><a href="/resume.html">resume</a></li>
                 </ul>
             </nav>
@@ -185,6 +186,18 @@
                         >contact</a
                     >
                     feel free to reach out.
+                </p>
+            </div>
+            <div class="cover projects">
+                <p class="about-item onEnter" style="--delay: 0.44s">
+                    View my
+                    <a
+                        aria-label="View case studies"
+                        href="/work/youtube-music-redesign/"
+                        data-analytics-link="Case Study"
+                        >case studies</a
+                    >
+                    to see my design process.
                 </p>
             </div>
         </main>
