adjust text shadow

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="work-summary">
             Worked on a team that developed and launched Question Bank
             Editor, an internal tool for content editors to curate
-            educational questions, plus platform bug fixes.
+            educational questions, plus platform bug fixes
         </div>
         <div class="roles">
             <span class="role">frontend</span>
@@ -156,7 +156,7 @@
     <div id="weber-shandwick-popover" popover class="company-popover">
         <div class="company-description">Large Media Company </div>
         <div class="work-summary">
-            I worked on a project management tool that allocates resources & staff to projects.
+            I worked on a project management tool that allocates resources & staff to projects
         </div>
         <div class="roles">
             <span class="role">frontend</span>
@@ -167,7 +167,7 @@
         <div class="work-summary">
             I was part of a team that collaborated with the client to
             optimize CI/CD infrastructure across multiple teams resulting in
-            improved efficiency and faster deployments.
+            improved efficiency and faster deployments
         </div>
         <div class="roles">
             <span class="role">devops</span>
